Add sosial media icon bar

--- a/src/components/styles/Header.scss
+++ b/src/components/styles/Header.scss
@@ -4,10 +4,10 @@ $vhEnd: 55vh;
 .header {
   h1 {
     color: honeydew;
-    font-size: 8rem;
+    font-size: 6rem;
     padding: 1.6rem;
     font-weight: lighter;
-    position: absolute;
+    position: relative;
     top: 55%;
     left: 8%;
   }
